# Azure-Container-Registry-Browser

./: .gitignore  .pre-commit-config.yaml  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
dev/: acr_browser.toml
src/acr_browser/: __init__.py  app.py  azure.py  config.py
src/acr_browser/renderables/: help.py  repos_table.py  tag_properties.py  tags_table.py
src/acr_browser/widgets/: header.py  repos.py  search.py  tag_properties.py  tags.py
src/azurecr_browser/: __init__.py  app.py  config.py  docker.py  util.py
src/azurecr_browser/renderables/: __init__.py  help.py  repos_table.py  tag_properties.py  tags_table.py
src/azurecr_browser/widgets/: __init__.py  header.py  repos.py
tools/: bump_version.py
